--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,10 @@
             </div>
             <div class="btn-group pull-right">
                 <a id="btn-deploy" class="btn action-deploy disabled" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
+
+            </div>
+                <div class="btn-group pull-right">
+                <a id="btn-undeploy" class="btn action-deploy" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> UnDeploy</a>
             </div>
         </div>
     </div>
