--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,14 @@
                 <a id="btn-deploy" class="btn action-deploy disabled" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
 
             </div>
-                <div class="btn-group pull-right">
+            <div class="btn-group pull-right">
                 <a id="btn-undeploy" class="btn action-deploy" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> UnDeploy</a>
             </div>
+            <div class="btn-group pull-right">
+                <a id="btn-discovery" class="btn action-deploy" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Discovery</a>
+            </div>
+
+
         </div>
     </div>
 </div>
