add deploying modal dialog

--- a/nodes/core/io/number.html
+++ b/nodes/core/io/number.html
@@ -29,7 +29,7 @@
 
 
     <!-- /** for mapper to identified if need to fire discovey */-->
-    <input type="hidden" id="node-input-check" hidden>
+    <input type="hidden" id="node-input-check" placeholder="false" hidden>
 
 </script>
 
