--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 <link rel="stylesheet" type="text/css" href="orion/built-editor.css"/>
 <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css"/>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="jquery/css/jquery.modal.css" type="text/css" media="screen" />
 <head>
 <body spellcheck="false">
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -247,6 +248,11 @@
     </form>
 </div>
 
+<div id="ex7" class="modal">
+  <p>Deploying please wait....... </p>
+</div>
+
+
 <script type="text/x-red" data-template-name="export-clipboard-dialog">
     <div class="form-row">
         <label for="node-input-export" style="display: block; width:100%;"><i class="icon-share"></i> Nodes:</label>
@@ -273,6 +279,7 @@
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="jquery/js/jquery-ui-1.10.3.custom.min.js"></script>
 <script src="jquery/js/jquery.ui.touch-punch.min.js"></script>
+<script src="jquery/js/jquery.modal.min.js"></script>
 <script src="orion/built-editor.min.js"></script>
 <script src="d3.v3.min.js"></script>
 <script src="red/main.js"></script>
