set acuator check to false

--- a/nodes/core/io/actuator/IASWD_S.html
+++ b/nodes/core/io/actuator/IASWD_S.html
@@ -5,7 +5,7 @@
         defaults: {
             name: { value:"" },
             deviceName: {value: ""},
-            check: {value: true}
+            check: {value: false}
         },
         inputs:0,
         outputs:1,
@@ -28,7 +28,7 @@
             <input type="text" id="node-input-deviceName" disabled>
         </div>
 
-        <input type="hidden" id="node-input-check" value="true">
+        <input type="hidden" id="node-input-check" value="false">
     </div>
 </script>
 
