--- a/nodes/core/logic/equal.html
+++ b/nodes/core/logic/equal.html
@@ -1,29 +1,34 @@
 <script type="text/javascript">
     RED.nodes.registerType('Equal',{
         category: 'function',
-        color: '#a6bbcf',
+        color:"#fdd0a2",
         defaults: {
-            name: { value:"==" },
+            name: { value:"" },
+            deviceType: {value: "Equal"},
             check: {value: false}
         },
         inputs:1,
         outputs:2,
-        icon: "light.png",
+        // icon: "light.png",
         label: function() {
-            return this.name || "Equal";
+            return this.name || "Equal (==)";
         }
     });
 </script>
 
 <script type="text/x-red" data-template-name="Equal">
-    <div class="form-row">
-        <div class="form-row">
-            <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-            <input type="text" id="node-input-name" placeholder="Name" value="==">
-        </div>
 
+    <!--
+    <div class="form-row">
+        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name" value="==">
+    </div>
+    -->
+
+    <div class="form-row">
         <input type="hidden" id="node-input-check" value="false">
     </div>
+
 </script>
 
 <script type="text/x-red" data-help-name="Equal">
