--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <div class="navbar-inner">
         <div class="container-fluid">
             <a class="brand" href="#"><img src="node-red.png"> <span class="red">Node-RED</span> </a>
-            <div class="btn-group pull-right">
+            <div class="btn-group pull-right" style="display: none;">
                 <a class="btn dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-align-justify"></i> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a id="btn-sidebar" tabindex="-1" href="#"><i class="icon-ok pull-right"></i><i class="icon-list-alt"></i> Sidebar</a></li>
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <div class="btn-group pull-right">
-                <a id="btn-deploy" class="btn action-deploy disabled" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
+                <a id="btn-deploy" class="btn action-deploy btn-danger" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
 
             </div>
             <div class="btn-group pull-right">
