--- a/nodes/core/io/actuator/Power_Switch.html
+++ b/nodes/core/io/actuator/Power_Switch.html
@@ -1,22 +1,25 @@
 <script type="text/javascript">
-    RED.nodes.registerType('IASWD_S',{
+    RED.nodes.registerType('Power Switch',{
         category: 'output',
-        color: '#a6bbcf',
+        color:"#87a980",
+        icon: "debug.png",
+        align: "right",
         defaults: {
             name: { value:"" },
+            deviceType: {value: "Meter_S"},
             deviceName: {value: ""},
             check: {value: false}
         },
         inputs:0,
         outputs:1,
-        icon: "light.png",
+        // icon: "light.png",
         label: function() {
-            return this.name || "IASWD_S";
+            return this.name || "Power Switch";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="IASWD_S">
+<script type="text/x-red" data-template-name="Power Switch">
     <div class="form-row">
         <div class="form-row">
             <label for="node-input-name"><i class="icon-tag"></i> Name</label>
@@ -32,7 +35,7 @@
     </div>
 </script>
 
-<script type="text/x-red" data-help-name="IASWD_S">
-    <p>Power-Switch</p>
+<script type="text/x-red" data-help-name="Power Switch">
+    <p>Power Switch</p>
 </script>
 
