--- a/nodes/core/io/number.html
+++ b/nodes/core/io/number.html
@@ -3,24 +3,20 @@
         category: 'input',
         color: '#a6bbcf',
         defaults: {
-            name: {value: ""},
             value: {value: 0},
+            deviceType: {value: "Number"},
             check: {value: false}
         },
         inputs:1,
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name || "Number";
+            return "Number = " + this.value || "Number = " + 0;
         }
     });
 </script>
 
 <script type="text/x-red" data-template-name="Number">
-    <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
 
     <div class="form-row">
         <label for="node-input-value"><i class="icon-tag"></i> Value</label>
