--- a/nodes/core/io/sensor/Light_Sensor.html
+++ b/nodes/core/io/sensor/Light_Sensor.html
@@ -1,9 +1,10 @@
 <script type="text/javascript">
-    RED.nodes.registerType('TemperatureMeasurement_S',{
+    RED.nodes.registerType('Light Sensor',{
         category: 'input',
         color: '#a6bbcf',
         defaults: {
             name: {value: ""},
+            deviceType: {value: "IlluminanceMeasurement_S"},
             deviceName: {value: ""},
             check: {value: true}
         },
@@ -11,12 +12,12 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name || "TemperatureMeasurement_S";
+            return this.name || "Light Sensor";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="TemperatureMeasurement_S">
+<script type="text/x-red" data-template-name="Light Sensor">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -35,7 +36,7 @@
 
 </script>
 
-<script type="text/x-red" data-help-name="TemperatureMeasurement_S">
-    <p>A TemperatureMeasurement_S sensor</p>
+<script type="text/x-red" data-help-name="Light Sensor">
+    <p>A Light Sensor</p>
 </script>
 
