--- a/nodes/core/io/sensor/Occupancy_Sensor.html
+++ b/nodes/core/io/sensor/Occupancy_Sensor.html
@@ -1,9 +1,10 @@
 <script type="text/javascript">
-    RED.nodes.registerType('OccupancySensing_S',{
+    RED.nodes.registerType('Occupancy Sensor',{
         category: 'input',
         color: '#a6bbcf',
         defaults: {
             name: {value: ""},
+            deviceType: {value: "OccupancySensing_S"},
             deviceName: {value: ""},
             check: {value: true}
         },
@@ -11,12 +12,12 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name || "OccupancySensing_S";
+            return this.name || "Occupancy Sensor";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="OccupancySensing_S">
+<script type="text/x-red" data-template-name="Occupancy Sensor">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -33,7 +34,7 @@
 
 </script>
 
-<script type="text/x-red" data-help-name="OccupancySensing_S">
-    <p>A OccupancySensing_S sensor</p>
+<script type="text/x-red" data-help-name="Occupancy Sensor">
+    <p>A Occupancy Sensor</p>
 </script>
 
