--- a/nodes/core/io/sensor/Temperature_Sensor.html
+++ b/nodes/core/io/sensor/Temperature_Sensor.html
@@ -1,9 +1,10 @@
 <script type="text/javascript">
-    RED.nodes.registerType('IlluminanceMeasurement_S',{
+    RED.nodes.registerType('Temperature Sensor',{
         category: 'input',
         color: '#a6bbcf',
         defaults: {
             name: {value: ""},
+            deviceType: {value: "TemperatureMeasurement_S"},
             deviceName: {value: ""},
             check: {value: true}
         },
@@ -11,12 +12,12 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name || "IlluminanceMeasurement_S";
+            return this.name || "Temperature Sensor";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="IlluminanceMeasurement_S">
+<script type="text/x-red" data-template-name="Temperature Sensor">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
@@ -35,7 +36,7 @@
 
 </script>
 
-<script type="text/x-red" data-help-name="IlluminanceMeasurement_S">
-    <p>A IlluminanceMeasurement_S sensor</p>
+<script type="text/x-red" data-help-name="Temperature Sensor">
+    <p>A Temperature Sensor</p>
 </script>
 
