--- a/nodes/core/logic/Less_Equal_Than.html
+++ b/nodes/core/logic/Less_Equal_Than.html
@@ -1,37 +1,36 @@
 <script type="text/javascript">
-    RED.nodes.registerType('Or',{
+    RED.nodes.registerType('Less Equal Than',{
         category: 'function',
         color:"#fdd0a2",
         defaults: {
             name: { value:"" },
-            deviceType: {value: "Or"},
+            deviceType: {value : "LessEqualThan"},
             check: {value: false}
         },
         inputs:1,
         outputs:2,
         // icon: "light.png",
         label: function() {
-            return this.name || "Or (||)";
+            return this.name || "Less Equal Than (<=)";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="Or">
+<script type="text/x-red" data-template-name="Less Equal Than">
 
     <!--
     <div class="form-row">
-            <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-            <input type="text" id="node-input-name" placeholder="Name" value="==">
+        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
+        <input type="text" id="node-input-name" placeholder="Name" value="<=">
     </div>
     -->
 
     <div class="form-row">
         <input type="hidden" id="node-input-check" value="false">
     </div>
-
 </script>
 
-<script type="text/x-red" data-help-name="Or">
-    <p>An Or Operator</p>
+<script type="text/x-red" data-help-name="Less Equal Than">
+    <p>A LessEqualThan</p>
 </script>
 
