--- a/nodes/core/logic/Less_Than.html
+++ b/nodes/core/logic/Less_Than.html
@@ -1,32 +1,37 @@
 <script type="text/javascript">
-    RED.nodes.registerType('LessThan',{
+    RED.nodes.registerType('Less Than',{
         category: 'function',
         color:"#fdd0a2",
         defaults: {
-            name: { value:"<" },
+            name: { value:"" },
+            deviceType: {value: "LessThan"},
             check: {value: false}
         },
         inputs:1,
         outputs:2,
-        icon: "light.png",
+        // icon: "light.png",
         label: function() {
-            return this.name || "LessThan";
+            return this.name || "Less Than (<)";
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="LessThan">
+<script type="text/x-red" data-template-name="Less Than">
+
+    <!--
     <div class="form-row">
-        <div class="form-row">
             <label for="node-input-name"><i class="icon-tag"></i> Name</label>
             <input type="text" id="node-input-name" placeholder="Name" value="<">
-        </div>
+    </div>
+    -->
 
+    <div class="form-row">
         <input type="hidden" id="node-input-check" value="false">
     </div>
+
 </script>
 
-<script type="text/x-red" data-help-name="LessThan">
-    <p>A LessThan</p>
+<script type="text/x-red" data-help-name="Less Than">
+    <p>A Less Than Operator</p>
 </script>
 
