--- a/nodes/core/io/actuator/Warning_Device.html
+++ b/nodes/core/io/actuator/Warning_Device.html
@@ -8,7 +8,7 @@
             name: { value:"" },
             deviceType: { value : "IASWD_S"},
             deviceName: { value: "" },
-            check: {value: false}
+            check: {value: true}
         },
         inputs:0,
         outputs:1,
@@ -31,7 +31,7 @@
             <input type="text" id="node-input-deviceName" disabled>
         </div>
 
-        <input type="hidden" id="node-input-check" value="false">
+        <input type="hidden" id="node-input-check" value="true">
     </div>
 </script>
 
