--- a/nodes/core/io/number.html
+++ b/nodes/core/io/number.html
@@ -5,6 +5,7 @@
         defaults: {
             value: {value: 0},
             deviceType: {value: "Number"},
+            category: {value: "input"},
             check: {value: false}
         },
         inputs:1,
@@ -25,7 +26,6 @@
 
 
     <!-- /** for mapper to identified if need to fire discovey */-->
-    <input type="hidden" id="node-input-check" placeholder="false" hidden>
 
 </script>
 
