--- a/nodes/core/io/sensor/Occupancy_Sensor.html
+++ b/nodes/core/io/sensor/Occupancy_Sensor.html
@@ -4,8 +4,9 @@
         color: '#a6bbcf',
         defaults: {
             name: {value: ""},
-            deviceType: {value: "OccupancySensing_S"},
+            deviceType: {value: "IASZONE_S"},
             deviceName: {value: ""},
+            category: {value: "input"},
             check: {value: true}
         },
         inputs:1,
@@ -28,9 +29,6 @@
         <input type="text" id="node-input-deviceName" disabled>
     </div>
 
-
-    <!-- /** for mapper to identified if need to fire discovey */-->
-    <input type="hidden" id="node-input-check" placeholder="true" hidden>
 
 </script>
 
