1. Remove useless attribute from node 2. Add 'is_master' attribute to request JSONObject to let mapper know who's the master

--- a/nodes/core/io/actuator/Warning_Device.html
+++ b/nodes/core/io/actuator/Warning_Device.html
@@ -5,33 +5,24 @@
         icon: "debug.png",
         align: "right",
         defaults: {
-            name: { value:"" },
             deviceType: { value : "IASWD_S"},
             deviceName: { value: "" },
+            category: {value: "output"},
             check: {value: true}
         },
         inputs:0,
         outputs:1,
         // icon: "light.png",
         label: function() {
-            return this.name || "Warning Device";
+            return "Warning Device";
         }
     });
 </script>
 
 <script type="text/x-red" data-template-name="Warning Device">
     <div class="form-row">
-        <div class="form-row">
-            <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-            <input type="text" id="node-input-name" placeholder="Name">
-        </div>
-
-        <div class="form-row">
-            <label for="node-input-deviceName"><i class="icon-tag"></i>Real Device Name</label>
-            <input type="text" id="node-input-deviceName" disabled>
-        </div>
-
-        <input type="hidden" id="node-input-check" value="true">
+        <label for="node-input-deviceName"><i class="icon-tag"></i>Real Device Name</label>
+        <input type="text" id="node-input-deviceName" disabled>
     </div>
 </script>
 
