--- a/nodes/core/io/actuator/Power_Switch.html
+++ b/nodes/core/io/actuator/Power_Switch.html
@@ -5,7 +5,6 @@
         icon: "debug.png",
         align: "right",
         defaults: {
-            name: { value:"" },
             deviceType: {value: "ONOFF_S"},
             deviceName: {value: ""},
             category: {value: "output"},
@@ -15,16 +14,12 @@
         outputs:1,
         // icon: "light.png",
         label: function() {
-            return this.name || "Power Switch";
+            return "Power Switch";
         }
     });
 </script>
 
 <script type="text/x-red" data-template-name="Power Switch">
-    <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
 
     <div class="form-row">
         <label for="node-input-deviceName"><i class="icon-tag"></i>Real Device Name</label>
