--- a/nodes/core/io/sensor/Occupancy_Sensor.html
+++ b/nodes/core/io/sensor/Occupancy_Sensor.html
@@ -3,7 +3,6 @@
         category: 'input',
         color: '#a6bbcf',
         defaults: {
-            name: {value: ""},
             deviceType: {value: "IASZONE_S"},
             deviceName: {value: ""},
             category: {value: "input"},
@@ -13,16 +12,12 @@
         outputs:0,
         icon: "bridge.png",
         label: function() {
-            return this.name || "Occupancy Sensor";
+            return "Occupancy Sensor";
         }
     });
 </script>
 
 <script type="text/x-red" data-template-name="Occupancy Sensor">
-    <div class="form-row">
-        <label for="node-input-name"><i class="icon-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
 
     <div class="form-row">
         <label for="node-input-deviceName"><i class="icon-tag"></i>Real Device Name</label>
