Modified node icon

--- a/nodes/core/io/actuator/Warning_Device.html
+++ b/nodes/core/io/actuator/Warning_Device.html
@@ -2,7 +2,7 @@
     RED.nodes.registerType('Warning Device',{
         category: 'output',
         color:"#87a980",
-        icon: "debug.png",
+        icon: "formosa/fi_alarm.png",
         align: "right",
         defaults: {
             deviceType: { value : "IASWD_S"},
