--- a/nodes/core/io/actuator/Power_Switch.html
+++ b/nodes/core/io/actuator/Power_Switch.html
@@ -2,7 +2,7 @@
     RED.nodes.registerType('Power Switch',{
         category: 'output',
         color:"#87a980",
-        icon: "debug.png",
+        icon: "formosa/fi_powersocket.png",
         align: "right",
         defaults: {
             deviceType: {value: "ONOFF_S"},
