--- a/nodes/core/io/sensor/Occupancy_Sensor.html
+++ b/nodes/core/io/sensor/Occupancy_Sensor.html
@@ -10,7 +10,7 @@
         },
         inputs:1,
         outputs:0,
-        icon: "bridge.png",
+        icon: "formosa/fi_occupancy.png",
         label: function() {
             return "Occupancy Sensor";
         }
