--- a/nodes/core/io/sensor/Temperature_Sensor.html
+++ b/nodes/core/io/sensor/Temperature_Sensor.html
@@ -10,7 +10,7 @@
         },
         inputs:1,
         outputs:0,
-        icon: "bridge.png",
+        icon: "formosa/fi_temperature.png",
         label: function() {
             return this.name || "Temperature Sensor";
         }
