--- a/nodes/core/io/actuator/Warning_Device.html
+++ b/nodes/core/io/actuator/Warning_Device.html
@@ -2,7 +2,6 @@
     RED.nodes.registerType('Warning Device',{
         category: 'output',
         color:"#87a980",
-        icon: "formosa/fi_alarm.png",
         align: "right",
         defaults: {
             deviceType: { value : "IASWD_S"},
@@ -12,7 +11,7 @@
         },
         inputs:0,
         outputs:1,
-        // icon: "light.png",
+        icon: "formosa/alarm.png",
         label: function() {
             return "Warning Device";
         }
@@ -21,8 +20,22 @@
 
 <script type="text/x-red" data-template-name="Warning Device">
     <div class="form-row">
-        <label for="node-input-deviceName"><i class="icon-tag"></i>Real Device Name</label>
-        <input type="text" id="node-input-deviceName" disabled>
+        <div>
+            <label class="labelOutput" for="node-input-node-id">ID: </label>
+            <input class="inputOutput" type="text" id="node-input-node-id" disabled></input>
+        </div>
+        <div>
+            <label class="labelOutput" for="node-input-category">Category: </label>
+            <input class="inputOutput" type="text" id="node-input-category" disabled></input>
+        </div>
+        <div>
+            <label class="labelOutput" for="node-input-deviceType">Device Type: </label>
+            <input class="inputOutput" type="text" id="node-input-deviceType" disabled></input>
+        </div>
+        <div>
+           <label class="labelOutput" for="node-input-deviceName">Location: </label>
+           <textarea class="inputOutput" id="node-input-deviceName" disabled></textarea>
+        </div>
     </div>
 </script>
 
