--- a/nodes/core/io/number.html
+++ b/nodes/core/io/number.html
@@ -2,6 +2,7 @@
     RED.nodes.registerType('Number',{
         category: 'input',
         color: '#a6bbcf',
+        icon: "formosa/number.png",
         defaults: {
             value: {value: 0},
             deviceType: {value: "Number"},
@@ -10,7 +11,6 @@
         },
         inputs:1,
         outputs:0,
-        icon: "bridge.png",
         label: function() {
             return "Number = " + this.value || "Number = " + 0;
         }
@@ -18,10 +18,23 @@
 </script>
 
 <script type="text/x-red" data-template-name="Number">
-
-    <div class="form-row">
-        <label for="node-input-value"><i class="icon-tag"></i> Value</label>
-        <input type="text" id="node-input-value" placeholder="Number">
+   <div class="form-row">
+        <div>
+            <label for="node-input-node-id">ID: </label>
+            <input type="text" id="node-input-node-id" disabled></input>
+        </div>
+        <div>
+            <label for="node-input-category">Category: </label>
+            <input type="text" id="node-input-category" disabled></input>
+        </div>
+        <div>
+            <label for="node-input-deviceType">Device Type: </label>
+            <input type="text" id="node-input-deviceType" disabled></input>
+        </div>
+        <div>
+            <label for="node-input-value">Value: </label>
+            <input type="text" id="node-input-value" placeholder="Number">
+        </div>
     </div>
 
 
